added getting for check
