# src/internal/models/dto/document.go
@@ -8,24 +8,27 @@ import (
 )
 
 type Document struct {
-	ID           uuid.UUID `json:"id"`
-	PageCount    int       `json:"page_count"`
-	DocumentName string    `json:"document_name"` //pdf file -- the whole file
-	ChecksCount  int       `json:"checks_count"`
-	CreatorID    uint64    `json:"creator_id"`
-	CreationTime time.Time `json:"creation_time"`
-	HasPassed    bool      `json:"has_passed"`
+	ID            uuid.UUID          `json:"id"`
+	PageCount     int                `json:"page_count"`
+	DocumentName  string             `json:"document_name"` //pdf file -- the whole file
+	ChecksCount   uint64             `json:"checks_count"`
+	CreatorID     uint64             `json:"creator_id"`
+	CreationTime  time.Time          `json:"creation_time"`
+	HasPassed     bool               `json:"has_passed"`
+	CheckedStatus models.CheckStatus `json:"check_status"`
 }
 
 func FromDtoDocument(document *Document) models.DocumentMetaData {
 
 	doc := models.DocumentMetaData{ //TODO::Think about changing only the pointer
-		ID:           document.ID,
-		PageCount:    document.PageCount,
-		DocumentName: document.DocumentName,
-		CreatorID:    document.CreatorID,
-		CreationTime: document.CreationTime,
-		HasPassed:    document.HasPassed,
+		ID:            document.ID,
+		PageCount:     document.PageCount,
+		DocumentName:  document.DocumentName,
+		CreatorID:     document.CreatorID,
+		CreationTime:  document.CreationTime,
+		HasPassed:     document.HasPassed,
+		ChecksCount:   document.ChecksCount,
+		CheckedStatus: document.CheckedStatus,
 	}
 	return doc
 
@@ -33,12 +36,14 @@ func FromDtoDocument(document *Document) models.DocumentMetaData {
 
 func ToDtoDocument(document models.DocumentMetaData) Document {
 	dtoDoc := Document{
-		ID:           document.ID,
-		PageCount:    document.PageCount,
-		DocumentName: document.DocumentName,
-		CreatorID:    document.CreatorID,
-		CreationTime: document.CreationTime,
-		HasPassed:    document.HasPassed,
+		ID:            document.ID,
+		PageCount:     document.PageCount,
+		DocumentName:  document.DocumentName,
+		CreatorID:     document.CreatorID,
+		CreationTime:  document.CreationTime,
+		HasPassed:     document.HasPassed,
+		ChecksCount:   document.ChecksCount,
+		CheckedStatus: document.CheckedStatus,
 	}
 	return dtoDoc
 }
