# src/internal/models/modelsDA/document.go
@@ -8,23 +8,26 @@ import (
 )
 
 type Document struct {
-	ID           uuid.UUID `gorm:"primaryKey;column:id"`
-	PageCount    int       `gorm:"column:page_count"`
-	DocumentName string    `gorm:"column:document_name"`
-	ChecksCount  int       `gorm:"column:checks_count"`
-	CreatorID    uint64    `gorm:"column:creator_id;"`
-	CreationTime time.Time `gorm:"column:creation_time"`
-	HasPassed    bool      `gorm:"column:has_passed"`
+	ID            uuid.UUID          `gorm:"primaryKey;column:id"`
+	PageCount     int                `gorm:"column:page_count"`
+	DocumentName  string             `gorm:"column:document_name"`
+	ChecksCount   uint64             `gorm:"column:checks_count"`
+	CreatorID     uint64             `gorm:"column:creator_id;"`
+	CreationTime  time.Time          `gorm:"column:creation_time"`
+	HasPassed     bool               `gorm:"column:has_passed"`
+	CheckedStatus models.CheckStatus `gorm:"column:checked_status"`
 }
 
 func FromDaDocument(documentDa *Document) models.DocumentMetaData {
 	return models.DocumentMetaData{
-		ID:           documentDa.ID,
-		PageCount:    documentDa.PageCount,
-		DocumentName: documentDa.DocumentName,
-		CreatorID:    documentDa.CreatorID,
-		CreationTime: documentDa.CreationTime,
-		HasPassed:    documentDa.HasPassed,
+		ID:            documentDa.ID,
+		PageCount:     documentDa.PageCount,
+		DocumentName:  documentDa.DocumentName,
+		CreatorID:     documentDa.CreatorID,
+		CreationTime:  documentDa.CreationTime,
+		HasPassed:     documentDa.HasPassed,
+		ChecksCount:   documentDa.ChecksCount,
+		CheckedStatus: documentDa.CheckedStatus,
 	}
 
 }
@@ -46,11 +49,13 @@ func FromDaDocumentSlice(documentsDa []Document) []models.DocumentMetaData {
 
 func ToDaDocument(document models.DocumentMetaData) *Document {
 	return &Document{
-		ID:           document.ID,
-		PageCount:    document.PageCount,
-		DocumentName: document.DocumentName,
-		CreatorID:    document.CreatorID,
-		CreationTime: document.CreationTime,
-		HasPassed:    document.HasPassed,
+		ID:            document.ID,
+		PageCount:     document.PageCount,
+		DocumentName:  document.DocumentName,
+		CreatorID:     document.CreatorID,
+		CreationTime:  document.CreationTime,
+		HasPassed:     document.HasPassed,
+		ChecksCount:   document.ChecksCount,
+		CheckedStatus: document.CheckedStatus,
 	}
 }
